Takes the schema as part of the Neo4j URI

--- a/CosmosToNeo4j/CosmosToNeo4j/appsettings.json
+++ b/CosmosToNeo4j/CosmosToNeo4j/appsettings.json
@@ -8,7 +8,7 @@
     "EnableSSL": false
   },
   "Neo4j": {
-    "Host": "localhost",
+    "Host": "neo4j://localhost",
     "Port": 7687,
     "Database": "neo4j",
     "Username": "neo4j",
