--- a/CosmosToNeo4j/CosmosToNeo4j/Properties/launchSettings.json
+++ b/CosmosToNeo4j/CosmosToNeo4j/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "CosmosToNeo4j": {
       "commandName": "Project",
-      "commandLineArgs": "-mapping Mapping.json"
+      "commandLineArgs": "-mapping Mapping.json -batchsize 100"
     },
     "Missing Mapping": {
       "commandName": "Project",
