--- a/CosmosToNeo4j/CosmosToNeo4j/CosmosToNeo4j.csproj
+++ b/CosmosToNeo4j/CosmosToNeo4j/CosmosToNeo4j.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Gremlin.Net" Version="3.6.1" />
+    <PackageReference Include="JetBrains.Annotations" Version="2022.3.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
     <PackageReference Include="Neo4jClient" Version="5.1.3" />
