--- a/CosmosToNeo4j/CosmosToNeo4j/CosmosToNeo4j.csproj
+++ b/CosmosToNeo4j/CosmosToNeo4j/CosmosToNeo4j.csproj
@@ -27,6 +27,9 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Mapping.LabelsNotThere.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Mapping.Empty.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
