Updating Mappings classes to read property definitions in json

--- a/CosmosToNeo4j/CosmosToNeo4j/Mapping.json
+++ b/CosmosToNeo4j/CosmosToNeo4j/Mapping.json
@@ -6,8 +6,15 @@
     },
     {
       "Cosmos": "Movie",
-      "Neo4j": "Movie"
-    }
+      "Neo4j": "Movie",
+      "Properties": [
+        {
+          "Cosmos": "title",
+          "Ignored": false,
+          "Indexed": true
+        }
+      ]
+                      }
   ],
   "Relationships": [
     {
