Indexing can be added to properties now

--- a/CosmosToNeo4j/CosmosToNeo4j/Mapping.json
+++ b/CosmosToNeo4j/CosmosToNeo4j/Mapping.json
@@ -12,6 +12,11 @@
           "Cosmos": "title",
           "Ignored": false,
           "Indexed": true
+        },
+        {
+          "Cosmos": "released",
+          "Ignored": false,
+          "Indexed": false
         }
       ]
                       }
