Properties ignored as well

--- a/CosmosToNeo4j/CosmosToNeo4j/Mapping.json
+++ b/CosmosToNeo4j/CosmosToNeo4j/Mapping.json
@@ -9,13 +9,13 @@
       "Neo4j": "Movie",
       "Properties": [
         {
-          "Cosmos": "title",
+          "Cosmos": "Title",
           "Ignored": false,
           "Indexed": true
         },
         {
-          "Cosmos": "released",
-          "Ignored": false,
+          "Cosmos": "Released",
+          "Ignored": true,
           "Indexed": false
         }
       ]
