Indexes for properties (#12)
* Updating Mappings classes to read property definitions in json

* Indexing can be added to properties now

* Properties ignored as well

--- a/CosmosToNeo4j/CosmosToNeo4j/Mapping.json
+++ b/CosmosToNeo4j/CosmosToNeo4j/Mapping.json
@@ -6,8 +6,20 @@
     },
     {
       "Cosmos": "Movie",
-      "Neo4j": "Movie"
-    }
+      "Neo4j": "Movie",
+      "Properties": [
+        {
+          "Cosmos": "Title",
+          "Ignored": false,
+          "Indexed": true
+        },
+        {
+          "Cosmos": "Released",
+          "Ignored": true,
+          "Indexed": false
+        }
+      ]
+                      }
   ],
   "Relationships": [
     {
