Allows a user to generate a mappings file from their CosmosDB

--- a/CosmosToNeo4j/CosmosToNeo4j/Properties/launchSettings.json
+++ b/CosmosToNeo4j/CosmosToNeo4j/Properties/launchSettings.json
@@ -15,6 +15,10 @@
     "Invalid Mapping": {
       "commandName": "Project",
       "commandLineArgs": "-mapping Mapping.LabelsNotThere.json -batchsize 100"
+    },
+    "GenerateMappings": {
+      "commandName": "Project",
+      "commandLineArgs": "-gm GeneratedMappings.json"
     }
   }
 }
