--- a/CosmosToNeo4j/CosmosToNeo4j/CosmosToNeo4j.csproj
+++ b/CosmosToNeo4j/CosmosToNeo4j/CosmosToNeo4j.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="JetBrains.Annotations" Version="2022.3.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
+    <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="17.4.1" />
     <PackageReference Include="Neo4jClient" Version="5.1.3" />
   </ItemGroup>
 
