Fixes Issue #14 - where mappings were not reflected in importing rels

--- a/CosmosToNeo4j/CosmosToNeo4j/Mapping.json
+++ b/CosmosToNeo4j/CosmosToNeo4j/Mapping.json
@@ -2,7 +2,7 @@
   "Nodes": [
     {
       "Cosmos": "Person",
-      "Neo4j": "Person"
+      "Neo4j": "Human"
     },
     {
       "Cosmos": "Movie",
