Defaults `CosmosRelationship` `Properties` property to have a value
Fixes #5

--- a/CosmosToNeo4j/CosmosToNeo4j/Properties/launchSettings.json
+++ b/CosmosToNeo4j/CosmosToNeo4j/Properties/launchSettings.json
@@ -19,6 +19,10 @@
     "GenerateMappings": {
       "commandName": "Project",
       "commandLineArgs": "-gm GeneratedMappings.json"
+    },
+    "Use Generated": {
+      "commandName": "Project",
+      "commandLineArgs": "-mapping GeneratedMappings.json -batchsize 500"
     }
   }
 }
