Updating some locations etc

--- a/CosmosToNeo4j/CosmosToNeo4j/CosmosToNeo4j.csproj
+++ b/CosmosToNeo4j/CosmosToNeo4j/CosmosToNeo4j.csproj
@@ -19,22 +19,22 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="Mapping.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <None Update="appsettings - Copy.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Mapping.LabelsNotThere.json">
+    <None Update="ExampleMappings\Mapping.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Mapping.Empty.json">
+    <None Update="ExampleMappings\Mapping.LabelsNotThere.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Mapping.Missing.json">
+    <None Update="ExampleMappings\Mapping.Empty.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="ExampleMappings\Mapping.Missing.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
